--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/themes/base/jquery-ui.min.css">
   <link rel="stylesheet" href="./assets/css/style.css" />
   <title>Taskmaster Pro</title>
 </head>
@@ -31,8 +32,6 @@
               To Do
             </h4>
             <ul id="list-toDo" class="list-group list-group-flush"> 
-              <li class="list-group-item">
-              </li>
             </ul>
           </div>
         </div>
@@ -41,11 +40,9 @@
         <div class="col-12 col-md-6 col-xl-3 mb-3">
           <div class="card">
             <h4 class="card-header bg-dark text-light">
-              To Do
+              In Progress
             </h4>
-            <ul id="list-toDo" class="list-group list-group-flush">
-              <li class="list-group-item">
-              </li>
+            <ul id="list-inProgress" class="list-group list-group-flush">
             </ul>
           </div>
         </div>
@@ -57,8 +54,6 @@
               In Review
             </h4>
             <ul id="list-inReview" class="list-group list-group-flush">
-              <li class="list-group-item">
-              </li>
             </ul>
           </div>
         </div>
@@ -68,10 +63,7 @@
               Done
             </h4>
             <ul id = "list-done" class = "list-group list-group-flush">
-              <li class="list-group-item">
-              </li>
             </ul>
-
           </div>
         </div>
         <!-- Done end -->
@@ -116,6 +108,8 @@
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/umd/popper.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
   <script src="./assets/js/script.js"></script>
